# ROS2-Integration-Service

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  rosis.repos
docs/: CreatingSH.md  Design.md  UseCases.md  system_handle_core_inheritance.puml
samples/: fiware.yaml  model.yaml
workspace/src/rosis/: CMakeLists.txt
workspace/src/rosis/src/: main.cpp
